add required-attr rule

--- a/i18n/ja.json
+++ b/i18n/ja.json
@@ -24,7 +24,9 @@
   },
   "{0} is {1}": "{0}は{1}です。",
   "Required {0}": "{0}が必要です",
+  "Required {0} on {1}": "{1}には{0}が必要です",
   "Not required {0}": "{0}は不要です",
+  "Not required {0} on {1}": "{1}には{0}は不要です",
   "Duplicate {0}": "{0}が重複しています。",
   "{0} is must {1} on {2}": "{0}は{2}で{1}べきです。",
   "{0} must {1}": "{0}は{1}するべきです。",
