--- a/packages/@markuplint/i18n/package.json
+++ b/packages/@markuplint/i18n/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "@markuplint/ml-core",
+	"name": "@markuplint/i18n",
 	"version": "1.0.0-alpha",
-	"description": "The core module of markuplint",
+	"description": "HTML parser for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
 	"license": "MIT",
@@ -12,10 +12,5 @@
 		"build": "tsc --build"
 	},
 	"devDependencies": {},
-	"dependencies": {
-		"@markuplint/i18n": "1.0.0-alpha",
-		"@markuplint/ml-ast": "1.0.0-alpha",
-		"@markuplint/ml-config": "1.0.0-alpha",
-		"css-what": "^2.1.0"
-	}
+	"dependencies": {}
 }
