--- a/packages/@markuplint/i18n/package.json
+++ b/packages/@markuplint/i18n/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@markuplint/i18n",
-	"version": "1.0.0-alpha",
+	"version": "1.0.0-alpha.0",
 	"description": "HTML parser for markuplint",
 	"repository": "git@github.com:markuplint/markuplint.git",
 	"author": "Yusuke Hirao <yusukehirao@me.com>",
@@ -14,7 +14,5 @@
 	"scripts": {
 		"build": "tsc",
 		"clean": "tsc --build --clean"
-	},
-	"devDependencies": {},
-	"dependencies": {}
+	}
 }
