Define local messages

--- a/packages/@markuplint/i18n/$schema.json
+++ b/packages/@markuplint/i18n/$schema.json
@@ -14,8 +14,9 @@
 				"attribute name": { "type": "string" },
 				"attribute value": { "type": "string" },
 				"attribute id value": { "type": "string" },
-				"{$} attribute": { "type": "string" },
 				"element": { "type": "string" },
+				"html elements": { "type": "string" },
+				"class name": { "type": "string" },
 				"quote": { "type": "string" },
 				"double quotation mark": { "type": "string" },
 				"single quotation mark": { "type": "string" },
@@ -23,18 +24,31 @@
 				"uppercase": { "type": "string" },
 				"illegal characters": { "type": "string" },
 				"escape in character reference": { "type": "string" },
+				"declarate": { "type": "string" },
 				"deprecated": { "type": "string" },
+				"obsolete": { "type": "string" },
 				"indentation": { "type": "string" },
 				"tab": { "type": "string" },
-				"space": { "type": "string" }
+				"space": { "type": "string" },
+				"break line": { "type": "string" },
+				"line break": { "type": "string" },
+				"equal sign": { "type": "string" },
+				"doctype": { "type": "string" },
+				"obsolete doctype": { "type": "string" },
+				"top level": { "type": "string" },
+				"the html specification": { "type": "string" },
+				"settings": { "type": "string" }
 			}
 		},
 		"{0} is {1}": { "type": "string" },
+		"The {0} {1} is {2}": { "type": "string" },
 		"Required {0}": { "type": "string" },
 		"Required {0} on {1}": { "type": "string" },
 		"Not required {0}": { "type": "string" },
 		"Not required {0} on {1}": { "type": "string" },
 		"Duplicate {0}": { "type": "string" },
+		"Missing the {0} {1}": { "type": "string" },
+		"Duplicate the {0} {1}": { "type": "string" },
 		"{0} is must {1} on {2}": { "type": "string" },
 		"{0} must {1}": { "type": "string" },
 		"{0} should {1}": { "type": "string" },
@@ -42,7 +56,21 @@
 		"{0} should be {1}": { "type": "string" },
 		"{0} of {1} must be {2}": { "type": "string" },
 		"{0} of {1} should be {2}": { "type": "string" },
+		"Never {0}": { "type": "string" },
+		"Insert {0}": { "type": "string" },
+		"Never {0} {1}": { "type": "string" },
 		"Values allowed for {0} attributes are {$}": { "type": "string" },
-		"{0} width spaces": { "type": "string" }
+		"{0} width spaces": { "type": "string" },
+		"Always insert {0} before {1} of {2}": { "type": "string" },
+		"Never insert {0} before {1} of {2}": { "type": "string" },
+		"Always insert {0} after {1} of {2}": { "type": "string" },
+		"Never insert {0} after {1} of {2}": { "type": "string" },
+		"{0} {1} is unmatched patterns ({2})": { "type": "string" },
+		"Should increase indentation": { "type": "string" },
+		"Should decrease indentation": { "type": "string" },
+		"Start tag and end tag indentation should align": { "type": "string" },
+		"Should have a unique label because {0} landmarks were markup more than once on a page": { "type": "string" },
+		"The {0} element must be descendant of the {1} element": { "type": "string" },
+		"Invalid content of the {0} element in {1}": { "type": "string" }
 	}
 }
