--- a/website/src/pages/set-up-rules.mdx
+++ b/website/src/pages/set-up-rules.mdx
@@ -50,6 +50,32 @@ This file is _loaded automatically_ when CLI executes or open a target file thro
 
 This is the default setting. If you never used it, you should probably copy it to your configuration file then customize you like.
 
+## Scoped Rules
+
+If you want the part of structures only to apply some rule then set the tag name to `nodeRules` or set the selector to `childNodeRules`.
+
+```json
+{
+	"nodeRules": [
+		{
+			"tagName": "main",
+			"rules": {
+				"class-naming": "/[a-z]+(__[a-z]+)?/"
+			}
+		}
+	],
+	"childNodeRules": [
+		{
+			"selector": ".ignoreClass",
+			"inheritance": true,
+			"rules": {
+				"character-reference": true
+			}
+		}
+	]
+}
+```
+
 ## Rules
 
 The detail of Each rule is said from the [Rules page](/rules).
