--- a/website/src/pages/set-up-rules.mdx
+++ b/website/src/pages/set-up-rules.mdx
@@ -10,7 +10,8 @@ next:
 
 ## Create a configuration file
 
-Create a file named `.markuplintrc` to the project directory that there is `package.json`. And add some rules to the `rules` property of this file.
+Create a file named `.markuplintrc` to the project directory that there is `package.json`.
+And add some rules to the `rules` property of this file.
 
 ```json
 {
