Changed word from "Validation" to "Conformance checking".

--- a/website/src/pages/rules/index.mdx
+++ b/website/src/pages/rules/index.mdx
@@ -2,7 +2,7 @@
 title: Rules
 ---
 
-## Validation
+## Conformance checking
 
 -   [`attr-duplication`](/rules/attr-duplication)
 -   [`character-reference`](/rules/character-reference)
