refine japnanese error message
インデントを上げる -> インデントを深くする
インデントを下げる -> インデントを浅くする

"上げる" means "up" and "increase", users may misunderstand to
tend to remove some indentation but we want to suggest adding
some it.

"深くする" means "make deeper", users should understand to add
some indentation.

--- a/packages/@markuplint/i18n/locales/ja.json
+++ b/packages/@markuplint/i18n/locales/ja.json
@@ -59,8 +59,8 @@
 	"Always insert {0} after {1} of {2}": "{2}の{1}の後には{0}を入れてください",
 	"Never insert {0} after {1} of {2}": "{2}の{1}の後には{0}を入れないでください",
 	"{0} {1} is unmatched patterns ({2})": "{1}{0}は次のパターンにマッチしませんでした {2}",
-	"Should increase indentation": "インデントを下げてください",
-	"Should decrease indentation": "インデントを上げてください",
+	"Should increase indentation": "インデントを深くしてください",
+	"Should decrease indentation": "インデントを浅くしてください",
 	"Start tag and end tag indentation should align": "開始タグと終了タグのインデントを揃えてください",
 	"Should have a unique label because {0} landmarks were markup more than once on a page": "{0}ランドマークが複数回マークアップされているため一意のラベルが必要です",
 	"The {0} element must be descendant of the {1} element": "{0}要素は{1}要素の子孫でなければなりません",
