Add the "wai-aria" rule page to the website.

--- a/website/src/pages/rules/index.mdx
+++ b/website/src/pages/rules/index.mdx
@@ -17,6 +17,7 @@ title: Rules
 
 -   [`landmark-roles`](/rules/landmark-roles)
 -   [`required-h1`](/rules/required-h1)
+-   [`wai-aria`](/rules/wai-aria)
 
 ## Naming Convention
 
