--- a/website/src/pages/set-up-rules.mdx
+++ b/website/src/pages/set-up-rules.mdx
@@ -44,7 +44,8 @@ This file is _loaded automatically_ when CLI executes or open a target file thro
 		"attr-value-quotes": false,
 		"case-sensitive-attr-name": false,
 		"case-sensitive-tag-name": false,
-		"indentation": false
+		"indentation": false,
+		"wai-aria": true
 	}
 }
 ```
