--- a/website/src/pages/setting-for-other-languages.mdx
+++ b/website/src/pages/setting-for-other-languages.mdx
@@ -23,13 +23,19 @@ $ npm install --save-dev @markuplint/vue-parser @markuplint/vue-spec
 $ yarn add -D @markuplint/vue-parser @markuplint/vue-spec
 ```
 
-There are more:
+### Supported languages
 
-| Lang                            | Parser                      | Spec                   |
-| ------------------------------- | --------------------------- | ---------------------- |
-| [_Pug_](https://pugjs.org/)     | `@markuplint/pug-parser`    | -                      |
-| [_Vue_](https://vuejs.org/)     | `@markuplint/vue-parser`    | `@markuplint/vue-spec` |
-| [_Svelte_](https://svelte.dev/) | `@markuplint/svelte-parser` | -                      |
+| Lang                                                                                   | Parser                        | Spec                   |
+| -------------------------------------------------------------------------------------- | ----------------------------- | ---------------------- |
+| [_Pug_](https://pugjs.org/)                                                            | `@markuplint/pug-parser`      | -                      |
+| [_Vue_](https://vuejs.org/)                                                            | `@markuplint/vue-parser`      | `@markuplint/vue-spec` |
+| [_Svelte_](https://svelte.dev/)                                                        | `@markuplint/svelte-parser`   | -                      |
+| [_PHP_](https://www.php.net/)                                                          | `@markuplint/php-parser`      | -                      |
+| [_eRuby_](https://docs.ruby-lang.org/ja/latest/class/ERB.html)                         | `@markuplint/erb-parser`      | -                      |
+| [_EJS_](https://ejs.co/)                                                               | `@markuplint/ejs-parser`      | -                      |
+| [_Mustache_](https://mustache.github.io/) or [_Handlebars_](https://handlebarsjs.com/) | `@markuplint/mustache-parser` | -                      |
+| [_Nunjucks_](https://mozilla.github.io/nunjucks/)                                      | `@markuplint/nunjucks-parser` | -                      |
+| [_Liquid_](https://liquidjs.com/)                                                      | `@markuplint/liquid-parser`   | -                      |
 
 ## Set to the configuration file
 
