--- a/website/src/pages/setting-for-other-languages.mdx
+++ b/website/src/pages/setting-for-other-languages.mdx
@@ -28,6 +28,7 @@ $ yarn add -D @markuplint/vue-parser @markuplint/vue-spec
 | Lang                                                                                   | Parser                        | Spec                   |
 | -------------------------------------------------------------------------------------- | ----------------------------- | ---------------------- |
 | [_Pug_](https://pugjs.org/)                                                            | `@markuplint/pug-parser`      | -                      |
+| [_JSX_](https://vuejs.org/) (React etc...)                                             | `@markuplint/jsx-parser`      | -                      |
 | [_Vue_](https://vuejs.org/)                                                            | `@markuplint/vue-parser`      | `@markuplint/vue-spec` |
 | [_Svelte_](https://svelte.dev/)                                                        | `@markuplint/svelte-parser`   | -                      |
 | [_PHP_](https://www.php.net/)                                                          | `@markuplint/php-parser`      | -                      |
