--- a/website/src/pages/setting-for-other-languages.mdx
+++ b/website/src/pages/setting-for-other-languages.mdx
@@ -18,6 +18,12 @@ $ yarn add -D @markuplint/pug-parser
 If a language has its own specification you should install the spec plugin with the parser plugin:
 
 ```
+$ npm install --save-dev @markuplint/jsx-parser @markuplint/react-spec
+# or
+$ yarn add -D @markuplint/jsx-parser @markuplint/react-spec
+```
+
+```
 $ npm install --save-dev @markuplint/vue-parser @markuplint/vue-spec
 # or
 $ yarn add -D @markuplint/vue-parser @markuplint/vue-spec
@@ -25,24 +31,35 @@ $ yarn add -D @markuplint/vue-parser @markuplint/vue-spec
 
 ### Supported languages
 
-| Lang                                                                                   | Parser                        | Spec                   |
-| -------------------------------------------------------------------------------------- | ----------------------------- | ---------------------- |
-| [_Pug_](https://pugjs.org/)                                                            | `@markuplint/pug-parser`      | -                      |
-| [_JSX_](https://vuejs.org/) (React etc...)                                             | `@markuplint/jsx-parser`      | -                      |
-| [_Vue_](https://vuejs.org/)                                                            | `@markuplint/vue-parser`      | `@markuplint/vue-spec` |
-| [_Svelte_](https://svelte.dev/)                                                        | `@markuplint/svelte-parser`   | -                      |
-| [_PHP_](https://www.php.net/)                                                          | `@markuplint/php-parser`      | -                      |
-| [_eRuby_](https://docs.ruby-lang.org/ja/latest/class/ERB.html)                         | `@markuplint/erb-parser`      | -                      |
-| [_EJS_](https://ejs.co/)                                                               | `@markuplint/ejs-parser`      | -                      |
-| [_Mustache_](https://mustache.github.io/) or [_Handlebars_](https://handlebarsjs.com/) | `@markuplint/mustache-parser` | -                      |
-| [_Nunjucks_](https://mozilla.github.io/nunjucks/)                                      | `@markuplint/nunjucks-parser` | -                      |
-| [_Liquid_](https://liquidjs.com/)                                                      | `@markuplint/liquid-parser`   | -                      |
+| Lang                                                                                   | Parser                        | Spec                     |
+| -------------------------------------------------------------------------------------- | ----------------------------- | ------------------------ |
+| [_Pug_](https://pugjs.org/)                                                            | `@markuplint/pug-parser`      | -                        |
+| [_JSX_](https://vuejs.org/) (React etc...)                                             | `@markuplint/jsx-parser`      | `@markuplint/react-spec` |
+| [_Vue_](https://vuejs.org/)                                                            | `@markuplint/vue-parser`      | `@markuplint/vue-spec`   |
+| [_Svelte_](https://svelte.dev/)                                                        | `@markuplint/svelte-parser`   | -                        |
+| [_PHP_](https://www.php.net/)                                                          | `@markuplint/php-parser`      | -                        |
+| [_eRuby_](https://docs.ruby-lang.org/ja/latest/class/ERB.html)                         | `@markuplint/erb-parser`      | -                        |
+| [_EJS_](https://ejs.co/)                                                               | `@markuplint/ejs-parser`      | -                        |
+| [_Mustache_](https://mustache.github.io/) or [_Handlebars_](https://handlebarsjs.com/) | `@markuplint/mustache-parser` | -                        |
+| [_Nunjucks_](https://mozilla.github.io/nunjucks/)                                      | `@markuplint/nunjucks-parser` | -                        |
+| [_Liquid_](https://liquidjs.com/)                                                      | `@markuplint/liquid-parser`   | -                        |
 
 ## Set to the configuration file
 
 Set about the plugin to the `parser` option on the configuration file.
 And If it has spec add to the `specs` option.
 Set a regular expression that can identify the target file name to the `parser` option key.
+
+If you use React.
+
+```json
+{
+	"parser": {
+		".vue$": "@markuplint/jsx-parser"
+	},
+	"specs": ["@markuplint/react-spec"]
+}
+```
 
 ```json
 {
@@ -51,4 +68,26 @@ Set a regular expression that can identify the target file name to the `parser` 
 	},
 	"specs": ["@markuplint/vue-spec"]
 }
+```
+
+For example, if allow the `key` attribute you need `@markuplint/react-spec` or `@markuplint/vue-spec` because it is not allowed through HTML spec.
+
+```js
+const Component = ({ list }) => {
+	return (
+		<ul>
+			{list.map(item => (
+				<li key={item.key}>{item.text}</li>
+			))}
+		</ul>
+	);
+};
+```
+
+```html
+<template>
+	<ul>
+		<li v-for="item in list" :key="item.key">{{ item.text }}</li>
+	</ul>
+</template>
 ```
