--- a/website/src/pages/setting-for-other-languages.mdx
+++ b/website/src/pages/setting-for-other-languages.mdx
@@ -55,7 +55,7 @@ If you use React.
 ```json
 {
 	"parser": {
-		".vue$": "@markuplint/jsx-parser"
+		".jsx$": "@markuplint/jsx-parser"
 	},
 	"specs": ["@markuplint/react-spec"]
 }
