Add astro to docs.

--- a/website/src/pages/setting-for-other-languages.mdx
+++ b/website/src/pages/setting-for-other-languages.mdx
@@ -37,6 +37,7 @@ $ yarn add -D @markuplint/vue-parser @markuplint/vue-spec
 | [_JSX_](https://vuejs.org/) (React etc...)                                             | `@markuplint/jsx-parser`      | `@markuplint/react-spec` |
 | [_Vue_](https://vuejs.org/)                                                            | `@markuplint/vue-parser`      | `@markuplint/vue-spec`   |
 | [_Svelte_](https://svelte.dev/)                                                        | `@markuplint/svelte-parser`   | -                        |
+| [_Astro_](https://astro.build/)                                                        | `@markuplint/astro-parser`    | -                        |
 | [_PHP_](https://www.php.net/)                                                          | `@markuplint/php-parser`      | -                        |
 | [_eRuby_](https://docs.ruby-lang.org/ja/latest/class/ERB.html)                         | `@markuplint/erb-parser`      | -                        |
 | [_EJS_](https://ejs.co/)                                                               | `@markuplint/ejs-parser`      | -                        |
