--- a/packages/@markuplint/i18n/tsconfig.test.json
+++ b/packages/@markuplint/i18n/tsconfig.test.json
@@ -1,13 +1,3 @@
 {
-	"extends": "../../../tsconfig.json",
-	"compilerOptions": {
-		"composite": true
-	},
-	"references": [
-		{
-			"path": "../ml-ast"
-		}
-	],
-	"include": ["./src/**/*"],
-	"exclude": ["node_modules"]
+	"extends": "../../../tsconfig.json"
 }
